--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p {
 }
 
 .works {
-    background-color: var(--malletWhite);
+    background-color: var(--white);
     height: 100vh;
     width: 100vw;
     display: flex;
