--- a/style.css
+++ b/style.css
@@ -7,12 +7,32 @@
     --gold: #BD9F71;
     --white: #fff;
     --grey: #c3c3c3;
+
+    /*mood*/
+    --mood-pri: #D5E4F5;
+
+    /*mapping buddy*/
+    --mapping-pri: #FFFFFF;
+
+    /*map*/
+    --geo-pri: var(--clubNavy);
+
+    /*birthin*/
+    --birthin-pri: #AEB9B8;
+
+    /*stock*/
+    --birthin-pri: #AEB9B8;
 }
 
 @font-face {
     font-family: nimbus;
     src: url('/static/fonts/NimbusSanL-Reg.otf');
 }
+
+
+/* ----------------------------------------
+   TAGS
+   ---------------------------------------- */
 
 html, body {
     margin: 0;
@@ -41,39 +61,23 @@ p {
     padding: 0;
 }
 
-#work-kanban {
-    list-style-type:none;
-    width: 1200px; 
-    max-height: 500px; /* Fixed height to limit rows */
-    display: grid; 
-    grid-template-rows: repeat(2, 250px); 
-    grid-template-columns: repeat(4, 250px);
-    grid-gap: 20px;
-  }
+/* ----------------------------------------
+   INTRODUCTION
+   ---------------------------------------- */
 
-
-.rect-widget {
-    width: 500px;
-    height: 250px;
-    border-radius: 20px !important;
-    grid-column: span 2;
-    /* box-shadow: inset 0px 0px 0px 2px black; */
-}
-
-.square-widget {
-    width: 250px;
-    height: 250px;
-    border-radius: 20px;
-    background-color: #2A3B49;
-}
 
 .home {
     background-color: var(--beige);
     height: 100vh;
 }
 
+/* ----------------------------------------
+   WORKS - KANBAN BOARD
+   ---------------------------------------- */
+
 .works {
-    background-color: var(--white);
+    background: rgb(255,255,255);
+    background: linear-gradient(185deg, rgb(213, 231, 247) 0%, rgba(255,255,255,1) 40%, rgb(227, 228, 238) 100%);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -82,8 +86,44 @@ p {
 }
 
 
+#work-kanban {
+    list-style-type:none;
+    max-width: 1200px; 
+    max-height: 600; /* Fixed height to limit rows */
+    display: grid; 
+    grid-template-rows: repeat(1, minmax(0,250px)); 
+    grid-template-columns: repeat(4, minmax(0,250px));
+    grid-gap: 20px;
+    min-height:0;
+    min-width:0;
+  }
+
+
+.rect-widget {
+    width: 525px;
+    height: 250px;
+    border-radius: 20px !important;
+    grid-column: span 2;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    /* box-shadow: inset 0px 0px 0px 2px black; */
+}
+
+.square-widget {
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
+    background-color: #2A3B49;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.square-widget img {
+    width:75%;
+}
+
+/* STOCK WIDGET */
+
 .stock-widget {
-    background-color: black;
+    background-color: rgb(17, 34, 58);
     color: var(--white);
     font-family: nimbus;
     display: flex;
@@ -114,14 +154,14 @@ p {
     gap: 0.1em;
 }
 
-/* title */
+    /* title */
 .stock_ticker p:first-child {
     font-size: 1em;
     color: var(--white);
     font-weight: 1000;
 }
 
-/* description */
+    /* description */
 .stock_ticker p:last-child {
     font-size: 0.8em;
     color: var(--grey);
@@ -141,12 +181,14 @@ p {
     width: 25%;
 }
 
+/* MAP WIDGET */
+
 .map-widget {
     overflow:scroll;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(10, 133, 255);
+    background-color: var(--geo-pri);
     grid-row: span 2;
 }
 
@@ -157,8 +199,55 @@ p {
     transform: translateX(200px) translateY(100px);
 }
 
+/* MOOD WIDGET */
+
+.wellness-widget {
+    background-color: var(--mood-pri);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* MAPPING BUDDY WIDGET */
+
+.calendar-widget {
+    background-color: var(--mapping-pri);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* BIRTHIN WIDGET */
+
+.business-widget {
+    background-color: var(--birthin-pri);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* BRAINHACK WIDGET */
+
+.camera-widget {
+    background-image: url("./static/images/xrperience.jpg");
+    background-size: cover;
+    background-position: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ----------------------------------------
+   FOOTER - CONTACT ME
+   ---------------------------------------- */
+
+
 .contact {
     background-color: var(--clubNavy);
     height: 50vh;
 }
+
+
+
+
 
