--- a/style.css
+++ b/style.css
@@ -113,14 +113,17 @@ nav ul {
     list-style-type:none;
     max-width: 1200px; 
     max-height: 600; /* Fixed height to limit rows */
-    display: grid; 
+    /* display: grid; 
     grid-template-rows: repeat(1, minmax(0,250px)); 
     grid-template-columns: repeat(4, minmax(0,250px));
-    grid-gap: 20px;
+    grid-gap: 20px; */
     min-height:0;
     min-width:0;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
   }
 
 
