--- a/style.css
+++ b/style.css
@@ -197,19 +197,6 @@ nav ul {
     align-items: center;
 }
 
-#works-popup {
-    display: none;
-    width: 100vw;
-    height: 100vh;
-    z-index: 10;
-    position: fixed;
-    /* margin-left: 10vw;
-    margin-top: 10vw; */
-    background-color: #FFFFFF;
-    border:1px solid var(--clubNavy);
-    border-radius: 20px;
-}
-
 
 #work-kanban {
     list-style-type:none;
@@ -401,12 +388,63 @@ nav ul {
 }
 
 /* ----------------------------------------
+   WORKS - POPUP
+   ---------------------------------------- */
+#works-popup {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
+    position: fixed;
+    /* margin-left: 10vw;
+    margin-top: 10vw; */
+    background-color: #FFFFFF;
+    flex-direction: column;
+}
+
+#popup-content {
+    width: 100%;
+    height: 100vh;
+    margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+    text-align: center;
+}
+
+#popup-back {
+    height: 5vh;
+    width: 20vw;
+    display: flex;
+    align-items: center;
+    position: fixed;
+}
+
+#popup-back p{
+    margin-left: 10px;
+}
+
+.popup-title-container {
+    width: 100%;
+    margin-top: 5vh;
+}
+
+.popup-project-container {
+    width: 100%;
+}
+
+.popup-project-container img {
+    max-width: 70%;
+}
+
+/* ----------------------------------------
    FOOTER - CONTACT ME
    ---------------------------------------- */
 
 
 .contact {
-    background-color: var(--clubNavy);
+    background-color: var(--white);
     height: 50vh;
 }
 
