--- a/style.css
+++ b/style.css
@@ -330,10 +330,8 @@ nav ul {
 }
 
 #map {
-    /* width: auto;
-    height: auto; */
     border-radius: 20px;
-    transform: translateX(200px) translateY(100px);
+    /* transform: translateX(200px) translateY(100px); */
 }
 
 .map-button {
