--- a/style.css
+++ b/style.css
@@ -464,8 +464,9 @@ nav ul {
 /* general layout */
 .popup-default {
     height: auto;
-    width: 80%;
+    width: 70%;
     display:flex;
+    margin-bottom: 7.5vh;
 }
 
 /* layout 1 */
@@ -476,18 +477,39 @@ nav ul {
 }
 
 .popup-default-1 img{
-    width: 70%;
+    width: 90%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /* layout 2 */
 .popup-default-2 {
-    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 10vh;
+    text-align: center;
 }
+
+.popup-default-2 .popup-description{
+    width: 90%;
+}
+
+.popup-default-2 img {
+    width: 90%;
+}
+
 
 /* layout 3 */
 .popup-default-3 {
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10vw;
+    text-align: center;
+}
+
+.popup-default-3 img {
+    width: 35%;
 }
 
 .left {
