--- a/style.css
+++ b/style.css
@@ -150,6 +150,12 @@ nav ul {
     border-radius: 100%;
 }
 
+.home-image img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 100%;
+}
+
 .home-links {
     width: 100%;
     height: 10vh;
