--- a/style.css
+++ b/style.css
@@ -429,6 +429,14 @@ nav ul {
     text-align: center;
 }
 
+#popup-content > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+    text-align: center;
+}
+
 #popup-back {
     height: 10vh;
     width: 15vw;
@@ -507,6 +515,7 @@ nav ul {
 
 /* layout 3 */
 .popup-default-3 {
+    width: 50%;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -515,6 +524,10 @@ nav ul {
 }
 
 .popup-default-3 img {
+    width: 35%;
+}
+
+.popup-default-3 video {
     width: 35%;
 }
 
