--- a/style.css
+++ b/style.css
@@ -562,6 +562,19 @@ nav ul {
     width: 70%;
 }
 
+.popup-link {
+    width: 55%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10vh;
+    padding: 5vh;
+    border-radius: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+
+
 
 /* ----------------------------------------
    FOOTER - CONTACT ME
