--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 }
 
 .find-out-cursor {
-    cursor: url('/static/images/find.svg'), pointer; 
+    cursor: url('/static/images/home/find.svg'), pointer; 
 }
 
 /* ----------------------------------------
@@ -211,15 +211,12 @@ nav ul {
     list-style-type:none;
     max-width: 1200px; 
     max-height: 600px;
-    min-height:0;
-    min-width:0;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-auto-rows: minmax(250px,auto); 
+    gap: 25px; 
   }
 
 
@@ -237,6 +234,8 @@ nav ul {
 }
 
 .square-widget {
+    grid-column: span 1;
+    /* grid-row: span 1; */
     width: 250px;
     height: 250px;
     border-radius: 20px;
@@ -255,6 +254,7 @@ nav ul {
 .square-widget img {
     width:75%;
 }
+
 
 /* STOCK WIDGET */
 
@@ -340,7 +340,7 @@ nav ul {
     justify-content: center;
     align-items: center;
     background-color: var(--geo-pri);
-    grid-row: span 2;
+    /* grid-row: span 1;  */
 }
 
 #map {
@@ -409,7 +409,7 @@ nav ul {
 /* BRAINHACK WIDGET */
 
 .camera-widget {
-    background-image: url("./static/images/xrperience.jpg");
+    background-image: url("./static/images/home/xrperience.jpg");
     background-size: cover;
     background-position: 30%;
     display: flex;
@@ -567,10 +567,9 @@ nav ul {
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10vh;
     padding: 5vh;
     border-radius: 20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
 }
 
 
