--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -26,47 +26,48 @@
 
 @font-face {
     font-family: nimbus;
-    src: url('/static/fonts/NimbusSanL-Reg.otf');
+    src: url('../fonts/NimbusSanL-Reg.otf');
 }
 
 @font-face {
     font-family: caviar;
-    src: url('/static/fonts/Caviar_Dreams_Bold.ttf');
+    src: url('../fonts/Caviar_Dreams_Bold.ttf');
 }
 
 @font-face {
     font-family: grotesk;
-    src: url('/static/fonts/SpaceGrotesk-Regular.otf');
+    src: url('../fonts/SpaceGrotesk-Regular.otf');
 }
 
 .find-out-cursor {
-    cursor: url('/static/images/home/find.svg'), pointer; 
+    cursor: url('../images/home/find.svg'), pointer;
 }
 
 /* ----------------------------------------
    TAGS
    ---------------------------------------- */
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     background-color: var(--white);
     font-family: grotesk, caviar;
-  }
-
-::-webkit-scrollbar { 
-    width: 0 !important 
 }
 
+::-webkit-scrollbar {
+    width: 0 !important
+}
 
 main {
-    width : 100%;
-    position : fixed;
+    width: 100%;
+    /* position : fixed; */
     margin: 0;
     padding: 0;
+    overflow: scroll;
 }
 
-main > div {
+main>div {
     scroll-snap-type: both mandatory;
 }
 
@@ -99,7 +100,7 @@ a:visited {
 
 
 .no-scroll {
-    overflow: hidden;  
+    overflow: hidden;
 }
 
 /* ----------------------------------------
@@ -182,11 +183,11 @@ nav ul {
 .home-links-stack a {
     width: 100%;
     height: 100%;
-    margin:0;
-    padding:0;
-} 
+    margin: 0;
+    padding: 0;
+}
 
-.home-links-stack img{
+.home-links-stack img {
     height: 60%;
     object-fit: contain;
 }
@@ -197,8 +198,8 @@ nav ul {
    ---------------------------------------- */
 
 .works {
-    background: rgb(255,255,255);
-    background: linear-gradient(185deg, rgb(213, 231, 247) 0%, rgba(255,255,255,1) 40%, rgb(227, 228, 238) 100%);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(185deg, rgb(213, 231, 247) 0%, rgba(255, 255, 255, 1) 40%, rgb(227, 228, 238) 100%);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -206,19 +207,53 @@ nav ul {
     align-items: center;
 }
 
-
 #work-kanban {
-    list-style-type:none;
-    max-width: 1200px; 
+    list-style-type: none;
+    max-width: 1200px;
     max-height: 600px;
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-auto-rows: minmax(250px,auto); 
-    gap: 25px; 
-  }
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(250px, auto);
+    gap: 25px;
+}
 
+/* Media query for smaller screens (e.g., tablets) */
+@media (max-width: 1150px) {
+    #work-kanban {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+
+    .rect-widget {
+        width: auto;
+        height: 200px;
+        grid-column: span 2;
+    }
+
+    .square-widget {
+        width: auto;
+        height: 180px;
+    }
+}
+
+/* Media query for even smaller screens (e.g., phones) */
+@media (max-width: 480px) {
+    #work-kanban {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+    }
+
+    .rect-widget {
+        grid-column: span 1;
+        height: 150px;
+    }
+
+    .square-widget {
+        height: 150px;
+    }
+}
 
 .rect-widget {
     width: 525px;
@@ -226,8 +261,7 @@ nav ul {
     border-radius: 20px !important;
     grid-column: span 2;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    /* box-shadow: inset 0px 0px 0px 2px black; */
-    cursor: move; /* fallback if grab cursor is unsupported */
+    cursor: move;
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
@@ -235,14 +269,11 @@ nav ul {
 
 .square-widget {
     grid-column: span 1;
-    /* grid-row: span 1; */
     width: 250px;
     height: 250px;
     border-radius: 20px;
     background-color: #2A3B49;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    /* cursor: move;
-    cursor: grab; */
 }
 
 .square-widget:active {
@@ -252,9 +283,8 @@ nav ul {
 }
 
 .square-widget img {
-    width:75%;
+    width: 75%;
 }
-
 
 /* STOCK WIDGET */
 
@@ -292,14 +322,14 @@ nav ul {
     margin-right: 2%;
 }
 
-    /* title */
+/* title */
 .stock-ticker p:first-child {
     font-size: 1.1em;
     color: var(--white);
     font-weight: 1000;
 }
 
-    /* description */
+/* description */
 .stock-ticker p:last-child {
     font-size: 0.8em;
     color: var(--grey);
@@ -311,10 +341,10 @@ nav ul {
     overflow: hidden;
 }
 
-    .stock-graph svg {
-        width: 100%;
-        height: 100%;
-    }
+.stock-graph svg {
+    width: 100%;
+    height: 100%;
+}
 
 .stock-price {
     width: 15%;
@@ -335,7 +365,7 @@ nav ul {
 /* MAP WIDGET */
 
 .map-widget {
-    overflow:hidden;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -361,14 +391,14 @@ nav ul {
     opacity: 0.8;
 }
 
-.map-button:active { 
+.map-button:active {
     background-color: #f5f5f5;
     opacity: 1;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .right-button {
-    transform: scale(-1,1);
+    transform: scale(-1, 1);
 }
 
 .up-button {
@@ -409,7 +439,7 @@ nav ul {
 /* BRAINHACK WIDGET */
 
 .camera-widget {
-    background-image: url("./static/images/home/xrperience.jpg");
+    background-image: url("../images/home/xrperience.jpg");
     background-size: cover;
     background-position: 30%;
     display: flex;
@@ -440,7 +470,7 @@ nav ul {
     text-align: center;
 }
 
-#popup-content > div{
+#popup-content>div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -462,7 +492,7 @@ nav ul {
     cursor: pointer;
 }
 
-#popup-back p{
+#popup-back p {
     margin-left: 10px;
 }
 
@@ -490,7 +520,7 @@ nav ul {
 .popup-default {
     height: auto;
     width: 70%;
-    display:flex;
+    display: flex;
     margin-bottom: 7.5vh;
 }
 
@@ -501,7 +531,7 @@ nav ul {
     align-items: center;
 }
 
-.popup-default-1 img{
+.popup-default-1 img {
     width: 90%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -515,7 +545,7 @@ nav ul {
     text-align: center;
 }
 
-.popup-default-2 .popup-description{
+.popup-default-2 .popup-description {
     width: 90%;
 }
 
@@ -564,7 +594,7 @@ nav ul {
 
 .popup-link {
     width: 55%;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: 5vh;
@@ -584,8 +614,3 @@ nav ul {
     background-color: var(--white);
     height: 50vh;
 }
-
-
-
-
-
